# MLops-fMRI-images-prediction

./: .gitignore  .pre-commit-config.yaml  .prettierignore  LICENSE  README.md  pyproject.toml  setup.cfg
.dvc/: config
artifacts/: best.ckpt.dvc  best_val_mse.txt
configs/: create_onnx.yaml  infer.yaml  infer_triton.yaml  train.yaml  triton.yaml
configs/checkpoint/: default.yaml
configs/data/: default.yaml
configs/dvc/: yandex_webdav.yaml
configs/infer_cfg/: default.yaml
configs/infer_triton_cfg/: default.yaml
configs/mlflow/: default.yaml
configs/model/: mlp.yaml
configs/plots/: default.yaml
configs/postprocess/: delta_reconstruct.yaml
configs/preprocess/audio/: default.yaml
configs/preprocess/fmri/: default.yaml
configs/preprocess/pairs/: dt_search_4_8.yaml  infer.yaml
configs/split/: default.yaml
configs/train_cfg/: default.yaml
configs/triton_server/: default.yaml
data/: raw.dvc
scripts/: callbacks.py  create_onnx.py  data_access.py  dataloader.py  infer.py  infer_triton.py  logging_utils.py  models.py  train.py  utils.py  visualizer.py
tests/: test_data.py
