[project]
name = "fmri"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dvc[gdrive]>=3.64.2",
    "dvc-webdav>=3.0.1",
    "librosa>=0.11.0",
    "lightning>=2.6.0",
    "matplotlib>=3.10.8",
    "nibabel>=5.3.3",
    "numpy>=2.3.5",
    "pillow>=12.0.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
    "mlflow>=3.7.0",
    "onnx>=1.20.0",
    "onnxruntime>=1.23.2",
    "onnxscript>=0.5.7",
    "tritonclient[grpc]>=2.64.0",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "flake8>=7.3.0",
    "isort>=7.0.0",
    "pre-commit>=4.5.1",
]

[tool.black]
line-length = 88
target-version = ["py313"]
